# Biblioteca_Moraes

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yaml  dockerfile.mysql  dockerfile.rust
src/: main.rs
src/modules/controller/: login.rs  router.rs  router_admin.rs  router_librarian.rs  router_user.rs  structs.rs
src/modules/db/: database.sql  db.rs
src/modules/templates/: index.tera  privacy_policy.tera  register.tera  terms.tera
src/modules/templates/script/: put_book.js  put_librarian.js  put_register.js
src/modules/templates/style/: home-admin.css  index.css  standard.css
src/modules/templates/view/admin/: books.tera  home.tera  librarians.tera
src/modules/templates/view/librarian/: home.tera
src/modules/templates/view/user/: home.tera
src/modules/util/: create_tera.rs  transform.rs
tests/: test-a-login.rs  test-b-db.rs  test-c-structs.rs  test-u-transform.rs  test-z.rs
