[package]
name = "mysql_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "biblioteca_moraes"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.26"
crossterm = "0.27.0"
lettre = "0.10.4"
lettre_email = "0.9.4"
mysql = "24.0.0"
rand = "0.8.5"
rocket = "0.4.11"
rocket_contrib = "0.4.11"
serde = "1.0.188"
serde_json = "1.0.106"
tera = "1.19.1"
thiserror = "1.0.48"
tokio = { version = "1", features = ["full"] }
